--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
-/Assets/AssetStoreTools*
+/[Ll]ogs/
+/[Mm]emoryCaptures/
 
 # Visual Studio 2015 cache directory
 /.vs/
@@ -31,3 +32,8 @@ sysinfo.txt
 
 # Builds
 *.apk
+
+# Node.js
+node_modules
+dist
+dist.zip
