--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 install:
   - npm install
 script:
-  - commitlint-travis
+#  - commitlint-travis
   - npm run build
   - npm run semantic-release
 deploy:
